@@ -1,5 +1,6 @@
 ## Version 0.1
 
+* Add import_OpenGWAS and therefore suggests gwasvcf, VariantAnnotation
 * Adopt import_eQTLCatalogue from eQTL-Catalogue-resources suggesting seqminer
 * Listed publications on pQTLs by Sun et al. (2018) and Suhre et al. (2020)
 * uniprot2ids() based on UniProt
